--- a/BaiKiemTra2/Views/Categories/Delete.cshtml
+++ b/BaiKiemTra2/Views/Categories/Delete.cshtml
@@ -12,11 +12,11 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.CategoryName)
+            @Html.DisplayNameFor(model => model.Name)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.CategoryName)
+            @Html.DisplayFor(model => model.Name)
         </dd>
 
         <dt>
