--- a/BaiKiemTra2/Views/Home/Index.cshtml
+++ b/BaiKiemTra2/Views/Home/Index.cshtml
@@ -2,30 +2,42 @@
     ViewBag.Title = "Home Page";
 }
 
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
-</div>
+<div class="nn-home-banner">
+    <img src="https://png.pngtree.com/thumb_back/fw800/background/20190220/ourmid/pngtree-clothing-sales-pink-background-beautiful-image_8438.jpg" class="img-responsive" />
+</div><!--end home banner-->
+@foreach (var p in Model)
+{
 
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+    <div class="nn-block-margin-top30px">
+        <div class="nn-cat-title">
+        </div>
+        <div>
+         
+                <div class="col-md-3 col-sm-6 col-sx-12">
+                    <div class="nn-product-box">
+
+                        <a href="/chi-tiet/@p.Name@p.ID">
+                            <img id="i@(p.ID)" class="img-responsive" alt="@p.Name" src="@p.Picture" />
+                        </a>
+                        <div class="nn-product-box-descriptions">
+                            <h3 class="nn-product-box-name">
+                                <a href="/Products/Details/@p.ID" title="@p.Name">@p.Name</a>
+                            </h3>
+                            <div class="nn-product-box-price ">
+                            </div>
+                            <div class="nn-product-box-actions">
+                                <button type="button" title="Add to Cart" class="btn btn-default add-to-cart" data-id="@p.ID">
+                                    <span>Add to Cart</span>
+                                </button>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+          
+        </div>
+
     </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-    </div>
-</div>
+    <div class="clearfix"></div>
+
+}
