--- a/BaiKiemTra2/Views/Products/Delete.cshtml
+++ b/BaiKiemTra2/Views/Products/Delete.cshtml
@@ -12,19 +12,19 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.Category.CategoryName)
+            @Html.DisplayNameFor(model => model.Category.Name)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Category.CategoryName)
+            @Html.DisplayFor(model => model.Category.Name)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.ProductName)
+            @Html.DisplayNameFor(model => model.Name)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.ProductName)
+            @Html.DisplayFor(model => model.Name)
         </dd>
 
         <dt>
@@ -44,51 +44,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.QuantityPerUnit)
+            @Html.DisplayNameFor(model => model.price)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.QuantityPerUnit)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.UnitPrice)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.UnitPrice)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.UnitslnStock)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.UnitslnStock)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.UnitsOnOrder)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.UnitsOnOrder)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.ReorderLevel)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.ReorderLevel)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Distcountinued)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Distcountinued)
+            @Html.DisplayFor(model => model.price)
         </dd>
 
     </dl>
