--- a/BaiKiemTra2/Views/Shared/_Layout.cshtml
+++ b/BaiKiemTra2/Views/Shared/_Layout.cshtml
@@ -21,8 +21,8 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("Categories", "Index", "Categories")</li>
+                    <li>@Html.ActionLink("Products", "Index", "Products")</li>
                 </ul>
             </div>
         </div>
